HW2/step_three/crypto/crypto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: crypto
  name: crypto
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: crypto
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/crypto: "true"
        io.kompose.service: crypto
    spec:
      containers:
        - env:
            - name: CACHE_TTL
              valueFrom:
                configMapKeyRef:
                  key: CACHE_TTL
                  name: env
            - name: COINAPI_KEY
              valueFrom:
                configMapKeyRef:
                  key: COINAPI_KEY
                  name: env
            - name: DJANGO_PORT
              valueFrom:
                configMapKeyRef:
                  key: DJANGO_PORT
                  name: env
            - name: REDIS_PORT
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PORT
                  name: env
          image: mohamadch91/crypto
          name: crypto
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
