HW2/step_three/crypto/crypto-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: crypto
  name: crypto
spec:
  env:
    - name: DJANGO_PORT
      valueFrom:
        configMapKeyRef:
          key: DJANGO_PORT
          name: env
  ports:
    - name: "8000"
      port: ${DJANGO_PORT}
      targetPort: ${DJANGO_PORT}
  selector:
    io.kompose.service: crypto
status:
  loadBalancer: {}
