HW2/step_three/crypto/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  env:
    - name: REDIS_PORT
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PORT
                  name: env
  ports:
    - name: "6379"
      port: ${REDIS_PORT}
      targetPort: ${REDIS_PORT}
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
