HW2/step_three/crypto/crypto-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: crypto
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/crypto: "true"
  podSelector:
    matchLabels:
      io.kompose.network/crypto: "true"
